--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img :src="img.src" :alt="img.title">
             </div> 
             
-            <div class="next"></div>
+            <div class="next"  @click="nextImg()"></div>
         </div>
    </div>
 
